Fixed Spacing on About Me Section

--- a/public/styles/sass/_aboutMe.scss
+++ b/public/styles/sass/_aboutMe.scss
@@ -18,7 +18,10 @@
     padding: 2em;
     height: 50vh;
     width: 50vw;
-    @include center;
+    // @include center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     @include shadow;
     // border: $cgBlue 1px solid;
     border-radius: 10px;
